--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,3 @@
-
 html, body {
   height: 100%;
   margin: 0;
@@ -63,7 +62,8 @@ body {
 /* Chat container */
 #chat-container {
   width: 35%; /* Set width to 35% */
-  height: 98vh;
+  margin: 4px;
+  height: 82vh;
   position: fixed;
   right: 0;
   top: 0;
@@ -81,14 +81,14 @@ body {
 /* Input container */
 #input-container {
   display: flex;
-  padding: 10px;
-  margin-left: 970px;
-  margin-bottom: 14px;
+  padding: 7px;
+  margin-left: 990px;
+  margin-bottom: 27px;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 10px;
   position: absolute; /* Position absolutely within the chat container */
   bottom: 0; /* Align to the bottom */
-  width: 35%; /* Change width to 40% */
+  width: 33%; /* Change width to 40% */
   box-sizing: border-box;
 }
 
@@ -111,14 +111,15 @@ body {
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
-  background-color: #556270;
+  background-color: 	#838996;
   color: #fff;
   cursor: pointer;
   transition: background-color 0.3s;
 }
 
 #send-button:hover, #voice-button:hover {
-  background-color: #8f94fb;
+  background-color: #4d4855;
+  ;
 }
 
 .message {
@@ -130,12 +131,13 @@ body {
 
 .user-message {
   align-self: flex-end;
-  background-color: #4e54c8;
+  background-color: #4d4855;
+  ;
   color: #fff;
 }
 
 .bot-message {
   align-self: flex-start;
-  background-color: #8f94fb;
+  background-color: #838996;
   color: #fff;
 }
